# character_controller_experiments

./: Cargo.toml
assets/: playground.map
assets/autosave/: playground.1.map
src/: camera.rs  character_controller.rs  debug.rs  fixed_update_util.rs  input.rs  main.rs  user_input.rs
src/character_controller/: custom.rs  fixed_update_utils.rs  input.rs  mod.rs  quake_1.rs  quake_3.rs
