[package]
name = "character_controller_experiments"
version = "0.1.0"
edition = "2024"

[dependencies]
avian3d = "0.4.1"
bevy = {version = "0.17.2", features = ["file_watcher"]}
bevy_enhanced_input = "0.19.3"
bevy_trenchbroom = "0.10.0"
bevy_trenchbroom_avian = "0.10.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[lints.clippy]
# Bevy supplies arguments to systems via dependency injection, so it's natural for systems to
# request more than 7 arguments, which would undesirably trigger this lint.
too_many_arguments = "allow"
# Queries may access many components, which would undesirably trigger this lint.
type_complexity = "allow"
# I hate this one
needless_range_loop = "allow"

[patch.crates-io]
avian3d = {version = "0.4.1", git = "https://github.com/janhohenheim/avian", branch = "cns"}
